@@ -1,14 +1,12 @@
 package com.teamtea.eclipticseasons.patch.mixin;
 
-import com.teamtea.eclipticseasons.patch.modules.PatchCore;
-import net.minecraftforge.fml.loading.FMLLoader;
+import net.neoforged.fml.loading.FMLLoader;
 import org.objectweb.asm.tree.ClassNode;
 import org.spongepowered.asm.mixin.extensibility.IMixinConfigPlugin;
 import org.spongepowered.asm.mixin.extensibility.IMixinInfo;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.Set;
 
 public class EclipticSeasonsPatchMixinPlugin  implements IMixinConfigPlugin {
@@ -29,7 +27,7 @@ public class EclipticSeasonsPatchMixinPlugin  implements IMixinConfigPlugin {
         int st = mixinClassName.indexOf(MIXIN_COMPAT_PACKAGE);
         if (st > -1) {
             String sub = Arrays.stream(mixinClassName.split(MIXIN_COMPAT_PACKAGE)).toList().get(1);
-            String modid = Arrays.stream(sub.split("\\.")).toList().get(0);
+            String modid = Arrays.stream(sub.split("\\.")).toList().getFirst();
             return FMLLoader.getLoadingModList().getModFileById(modid) != null;
         }
         return true;
